2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix symbolic place names in `seqc'.

	The `seqc' implementation was out-of-sync with the others in not
	defining `PLACE_LOCAL' and `PLACE_DEFAULT'.
	
	* tools/lib/t-seqc/include/sl_support.h: Rename `SVP_LOCAL' to
	`PLACE_LOCAL' and define `PLACE_DEFAULT'.

2009-09-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Small optimization in MT-alpha code generation.
	
	* tools/bin/spp (pppalpha.makerepl): Prepend the dollar signs
	early.

2009-09-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bugs in MT-alpha code generation.
	
	* tools/lib/t-pppalpha/include/sl_support.h: Fix `sl_setp' for
	floating-point shared parameters.

	* tools/bin/spp (pppalpha.findusedcallregs, pppalpha.rewritejsr):
	Be (more) careful about function calls where both int and fp
	registers are used for function calls.

	* tools/bin/spp (pppalpha.fixemptyf, pppalpha.filter2): Add new
	pass to rename `setempty' to `setemptyf' is the argument is a
	floating-point register. Use it.

	* tools/lib/t-utc0/slimpl.m4: Attempt to implement empty shared
	thread arguments by emitting an explicit load from the top of the
	address space.
	
2009-09-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify build.
	
	* lib/ptl.mk,	
	* lib/seqc.mk: Simplify by providing a generic rule %.c -> %.o.

2009-09-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for a graphical framebuffer.

	This changeset adds support for the graphics output in the MG
	simulator introduced in r2814-r2817, and simulates a framebuffer
	using memory but no graphics when using the other SVP
	implementations.
	
	* lib/include/svp/gfx.h,
	* lib/src/gfx.c: New.

	* lib/Makefile.am: Update accordingly.
	
	* lib/seqc.mk,
	* lib/ptl.mk: Include `gfx.c' in the library.

2009-09-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* tools/bin/Makefile.am: Make script generation dependent on the
	`Makefile' itself, since they need to be re-made when tools are
	reconfigured.
